# finance

./: .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.dashboard  Makefile  README.md  csv_importer.py  docker-compose.yml  main.py  models.py  mypy.ini  pyproject.toml  pytest.ini
.claude/: settings.local.json
api/: app.py  metrics.py
app/: app.py  dashboard.py  metrics.py  models.py  views.py
dashboard/: app.py  visualizations.py
etl/: config.py  csv_importer.py  database.py  init_db.py  mappings.py  models.py  orchestration.py  pipeline.py  queries.py  schema.py  types.py
etl/layers/: marts.py  metrics.py  raw.py  staging.py
frontend/: index.html  script.js  style.css
tests/: README.md  conftest.py  test_api_endpoints.py  test_api_metrics.py  test_etl_marts.py  test_etl_orchestration.py  test_etl_raw.py  test_etl_staging.py
