[project]
name = "finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=25.1.0",
    "jupyterlab>=4.4.6",
    "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "etl*"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
